# ecec-ocaml

./: README.md  dune-project  ecec.opam
lib/: dune  ecec.ml  encryption.ml  ffi.ml
lib/ecec/: dune
lib/ecec/.git_/: config  index  packed-refs
lib/ecec/.git_/logs/refs/remotes/origin/: HEAD
lib/ecec/.git_/objects/pack/: pack-3c773a98b6f7f25055012afb5715999d09e2414c.idx  pack-3c773a98b6f7f25055012afb5715999d09e2414c.pack
lib/ecec/.git_/refs/heads/: master
